--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,9 @@
   "permissions": [
     "storage"
   ],
-  "icons": {"16":  "icon.png",
-            "48":  "icon.png",
-            "128":  "icon.png"}
+  "icons": {
+    "16":  "icon.png",
+    "48":  "icon.png",
+    "128":  "icon.png"
+  }
 }
