--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,16 @@
   "name": "Scratch Warner",
   "version": "0.1",
   "browser_action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup/index.html"
   },
   "content_scripts": [
     {
       "matches": [
         "https://scratch.mit.edu/*"
       ],
-      "js": ["content.js"]
+      "js": [
+        "content.js"
+      ]
     }
   ],
   "permissions": [
