--- a/manifest.json
+++ b/manifest.json
@@ -19,8 +19,8 @@
     "storage"
   ],
   "icons": {
-    "16":  "icon.png",
-    "48":  "icon.png",
-    "128":  "icon.png"
+    "16":  "assets/icon.png",
+    "48":  "assets/icon.png",
+    "128":  "assets/icon.png"
   }
 }
